--- a/saque.html
+++ b/saque.html
@@ -147,7 +147,7 @@
               activateButton.addEventListener("click", () => {
                   const currentUrlParams = new URLSearchParams(window.location.search);
                   const utmParams = currentUrlParams.toString();
-                  const targetUrl = 'vsl.html';
+                  const targetUrl = 'pix.html';
                   const finalUrl = utmParams ? `${targetUrl}?${utmParams}` : targetUrl;
       
                   // Evento de rastreamento (opcional)
